--- a/packages/antd-form-item/package.json
+++ b/packages/antd-form-item/package.json
@@ -26,10 +26,10 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.5",
+    "antd": "^4.17.2",
     "microbundle": "^0.14.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "antd": "^4.17.2"
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "build": "microbundle --jsx React.createElement",
